--- a/index.html
+++ b/index.html
@@ -1,1 +1,61 @@
-<!DOCTYPE html> <html lang="en"> <head> <meta charset="UTF-8" /> <link rel="icon" type="image/svg+xml" href="/vite.svg" /> <meta name="viewport" content="width=device-width, initial-scale=1.0" /> <link rel="preconnect" href="https://fonts.googleapis.com"> <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet"> <title>Nambhi Amarnath - Java Backend Developer Portfolio</title> </head> <body> <div id="root"></div> <script type="module" src="/src/main.jsx"></script> </body> </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+  <!-- Mobile Responsive -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Primary SEO -->
+  <title>Amarnath Nambhi | Java Backend Developer | Full Stack Engineer</title>
+
+  <meta name="description" content="Official portfolio of Amarnath Nambhi, Java Backend Developer and Full Stack Engineer specializing in Spring Boot, React JS, REST APIs, and scalable web applications. View projects, certifications, and experience.">
+
+  <meta name="keywords" content="Amarnath Nambhi, Java Developer, Backend Developer, Full Stack Developer, React Developer, Spring Boot Developer, Software Engineer Portfolio India">
+
+  <meta name="author" content="Amarnath Nambhi" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Open Graph (For LinkedIn / WhatsApp sharing) -->
+  <meta property="og:title" content="Amarnath Nambhi | Java Backend Developer Portfolio" />
+  <meta property="og:description" content="Explore the professional portfolio of Amarnath Nambhi, Java Backend Developer and Full Stack Engineer." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://YOUR-LIVE-URL.vercel.app/" />
+  <meta property="og:image" content="https://YOUR-LIVE-URL.vercel.app/preview.png" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Amarnath Nambhi | Java Backend Developer">
+  <meta name="twitter:description" content="Official portfolio of Amarnath Nambhi showcasing backend and full stack projects.">
+  <meta name="twitter:image" content="https://YOUR-LIVE-URL.vercel.app/preview.png">
+
+  <!-- Google Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Amarnath Nambhi",
+    "url": "https://YOUR-LIVE-URL.vercel.app/",
+    "jobTitle": "Java Backend Developer",
+    "sameAs": [
+      "https://github.com/Amarnath2541",
+      "https://www.linkedin.com/in/YOUR-LINKEDIN"
+    ]
+  }
+  </script>
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+</html>
