--- a/index.html
+++ b/index.html
@@ -12,37 +12,37 @@
   <!-- Primary SEO -->
   <title>Amarnath Nambhi | Java Backend Developer | Full Stack Engineer</title>
 
-  <meta name="description" content="Official portfolio of Amarnath Nambhi, Java Backend Developer and Full Stack Engineer specializing in Spring Boot, React JS, REST APIs, and scalable web applications. View projects, certifications, and experience.">
+  <meta name="description" content="Official portfolio of Amarnath Nambhi, Java Backend Developer and Full Stack Engineer specializing in Spring Boot, React JS, REST APIs, and scalable web applications. Explore projects, certifications, and experience.">
 
-  <meta name="keywords" content="Amarnath Nambhi, Java Developer, Backend Developer, Full Stack Developer, React Developer, Spring Boot Developer, Software Engineer Portfolio India">
+  <meta name="keywords" content="Amarnath Nambhi, Java Backend Developer, Full Stack Developer, Spring Boot Developer, React JS Developer, Software Engineer India, Backend Engineer Portfolio">
 
   <meta name="author" content="Amarnath Nambhi" />
   <meta name="robots" content="index, follow" />
 
-  <!-- Open Graph (For LinkedIn / WhatsApp sharing) -->
+  <!-- Open Graph (LinkedIn / WhatsApp Preview) -->
   <meta property="og:title" content="Amarnath Nambhi | Java Backend Developer Portfolio" />
-  <meta property="og:description" content="Explore the professional portfolio of Amarnath Nambhi, Java Backend Developer and Full Stack Engineer." />
+  <meta property="og:description" content="Explore the professional portfolio of Amarnath Nambhi showcasing backend and full stack projects." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://YOUR-LIVE-URL.vercel.app/" />
-  <meta property="og:image" content="https://YOUR-LIVE-URL.vercel.app/preview.png" />
+  <meta property="og:url" content="https://amar-portfolio-jhmy.vercel.app/" />
+  <meta property="og:image" content="https://amar-portfolio-jhmy.vercel.app/vite.svg" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Amarnath Nambhi | Java Backend Developer">
   <meta name="twitter:description" content="Official portfolio of Amarnath Nambhi showcasing backend and full stack projects.">
-  <meta name="twitter:image" content="https://YOUR-LIVE-URL.vercel.app/preview.png">
+  <meta name="twitter:image" content="https://amar-portfolio-jhmy.vercel.app/vite.svg">
 
-  <!-- Google Structured Data -->
+  <!-- Structured Data (Helps Google Understand You) -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "Person",
     "name": "Amarnath Nambhi",
-    "url": "https://YOUR-LIVE-URL.vercel.app/",
+    "url": "https://amar-portfolio-jhmy.vercel.app/",
     "jobTitle": "Java Backend Developer",
     "sameAs": [
       "https://github.com/Amarnath2541",
-      "https://www.linkedin.com/in/YOUR-LINKEDIN"
+      "https://www.linkedin.com/in/nambhi-amarnath-4bbb32236/"
     ]
   }
   </script>
